# audio-scheduler

./: .gitignore  GITHUB发布指南.md  README.md  index.html  package-lock.json  package.json  server.js
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
